--- a/index.html
+++ b/index.html
@@ -1359,11 +1359,11 @@
                 html += '</tr>';
                 html += '<tr>';
                 html += '<td style="text-align: right;">' + permanent_spell + '</td>'
-                html += '<td>Permanent Sepll</td>'
+                html += '<td>Permanent Spell</td>'
                 html += '</tr>';
                 html += '<tr>';
                 html += '<td style="text-align: right;">' + nonpermanent_spell + '</td>'
-                html += '<td>Non-permanent Sepll</td>'
+                html += '<td>Non-permanent Spell</td>'
                 html += '</tr>';
                 html += '</table>';
                 $('#type_main').html(html);
@@ -1393,11 +1393,11 @@
                 html += '</tr>';
                 html += '<tr>';
                 html += '<td style="text-align: right;">' + permanent_spell + '</td>'
-                html += '<td>Permanent Sepll</td>'
+                html += '<td>Permanent Spell</td>'
                 html += '</tr>';
                 html += '<tr>';
                 html += '<td style="text-align: right;">' + nonpermanent_spell + '</td>'
-                html += '<td>Non-permanent Sepll</td>'
+                html += '<td>Non-permanent Spell</td>'
                 html += '</tr>';
                 html += '</table>';
                 $('#type_side').html(html);
