Update Archetype alchemy

--- a/index.html
+++ b/index.html
@@ -459,6 +459,10 @@
             'Undergrowth',
             'Will of the council',
 
+            'Intensity',
+            'Perpetually',
+            'Spellbook',
+
             // 'Gotcha!',
             // 'Hero's Reward',
             // 'Spiritcraft',
@@ -511,6 +515,9 @@
             'Learn',
             'Venture into the Dungeon',
             'Connive',
+
+            'Conjure',
+            'Seek',
 
             // 'Ante',
             // 'Ban',
